--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,17 @@
   
   <!-- Debug CSS -->
   <!-- <link rel="stylesheet" href="css/debug.css"> -->
-  
+  <!-- Resets -->
+  <link rel="stylesheet" href="css/minireset.min.css"> 
   <!-- Custom CSS if Needed -->
   <link rel="stylesheet" href="css/styles.css">  
   <!-- Custom Fonts --> 
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
+
+  <link rel="stylesheet" href="">
+  <!-- INSERT POPPINS FONT HERE -->
+
+
 	<script src="https://kit.fontawesome.com/8e7f20e358.js" crossorigin="anonymous"></script>
 </head>
