--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,15 @@
 html {
 	background-color: black;
+	color: #fff;
+	font-size: 16px;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  line-height: 1.5;
+	min-height: 100vh;
+  min-width: 300px;
+  overflow-x: hidden;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+	font-family: "Quicksand", sans-serif;
 }
 
 .container {
