--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,7 +4,7 @@
 
   <body>    
       {% include nav.html %}
-      {% include landing_content.html %}
+      {% include hero.html %}
       <!-- {% include footer.html %} -->    
   </body>
 </html>
