--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,14 @@ html {
 	background-color: black;
 	color: #fff;
 	font-size: 16px;
+	font-family: "Poppins", sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   line-height: 1.5;
 	min-height: 100vh;
   min-width: 300px;
   overflow-x: hidden;
-  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
-	font-family: "Quicksand", sans-serif;
+  text-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);	
 }
 
 .container {
