--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,18 +4,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="{{ site.description }}" />
   <meta name="author" content="{{ site.author }}" />
-  <title>{{ site.title }}</title>  
-  
-  
+  <title>{{ site.title }}</title>    
   <!-- Debug CSS -->
   <!-- <link rel="stylesheet" href="css/debug.css"> -->
   <!-- Resets -->
   <link rel="stylesheet" href="css/minireset.min.css"> 
-  <!-- Custom CSS if Needed -->
+  <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styles.css">  
   <!-- Custom Fonts --> 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700&display=swap">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap">
+  <!-- Font Awesome Icons -->
 	<script src="https://kit.fontawesome.com/8e7f20e358.js" crossorigin="anonymous"></script>
 </head>
