--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,25 @@ html {
   text-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);	
 }
 
+a {
+  color: currentColor;
+  cursor: pointer;
+  text-decoration: none;
+}
+img {
+	vertical-align: middle;
+}
+
+.wallpaper,
+.picture-shadow,
+.picture-image {
+  display: block;
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
 .container {
   padding-right: 15px;
   padding-left: 15px;
