Hero section coming soon text

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,20 @@
-<div class="wrapper">    
-    <p class="center_text">
-      Currently Under Construction:
-      Coming Soon!
-    </p>    
-</div>
+<style>
+.hero h1 {
+    text-align: center;
+    color: #BA28FF;
+    font-size: 2.25rem;
+    margin-left: auto;
+    margin-right: auto;
+    line-height: 1.25;
+    max-width: 50rem;
+  }
+
+@media screen and (min-width: 768px) {
+  .hero h1 {
+    font-size: 3rem;     
+  }
+}
+</style>
+<section class="hero">  
+    <h1 class="hero_title">Trusted analysis on tech stocks and crypto - coming soon!</h1>
+</section>
