--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,4 @@
-<style>  
-  .nav {
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-  }
+<style>   
   .nav_parent {
     display: flex;
     align-items: center;
@@ -15,19 +10,19 @@
   }
   nav .logo {
     width: 3.5rem;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
     position: relative;
     top: -10px;
   }
    nav .title {
     font-size: 1.75rem;
-    font-weight: 600;
+    font-weight: 700;
     text-transform: uppercase;
     color: #BA28FF
   } 
 </style>
 
-<nav class="nav" role="navigation">
+<nav role="navigation">
   <div class="container"> 
     <div class="nav_parent">
       <div class="logo_wrapper">
