--- a/_layouts/main_layout.html
+++ b/_layouts/main_layout.html
@@ -4,7 +4,7 @@
 
   <body>    
       {% include nav.html %}
-      <!-- {% include hero.html %} -->
+      {% include hero.html %}
       <!-- {% include footer.html %} -->    
   </body>
 </html>
