Extra copy and max-width tweak

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -11,10 +11,11 @@
 
 @media screen and (min-width: 768px) {
   .hero h1 {
-    font-size: 3rem;     
+    font-size: 2.5rem;
   }
 }
 </style>
+
 <section class="hero">  
-    <h1 class="hero_title">Trusted analysis on tech stocks and crypto - coming soon!</h1>
+    <h1 class="hero_title">New tools and weeky reports on tech stocks and crypto - coming soon!</h1>
 </section>
