Simplify media query to mobile-first approach

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -15,7 +15,6 @@
   }
 }
 </style>
-
 <section class="hero">  
-    <h1 class="hero_title">New tools and weeky reports on tech stocks and crypto - coming soon!</h1>
+    <h1 class="hero_title">New tools and weekly reports on tech stocks and crypto - coming soon!</h1>
 </section>
