--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,20 +1,64 @@
+
+<section class="hero">
+  <h1 class="hero_title">New tools and weekly reports on tech stocks and crypto - coming soon!</h1>
+  <div class="hero_flex">
+    <div class="hero_item">
+      <div class="icon_wrapper">
+        <i class="fab fa-facebook"></i>
+      </div>
+      <p>Click here to join the Facebook group and become a member of our tech community.</p>
+    </div>  
+    <div class="hero_item">
+      <div class="icon_wrapper">
+        <i class="fab fa-facebook"></i>
+      </div>
+      <p>Click here to join the Facebook group and become a member of our tech community.</p>
+    </div>    
+  </div>    
+</section>
+
 <style>
-.hero h1 {
-    text-align: center;
-    color: #BA28FF;
+  /* MOBILE */
+  .hero h1 {
     font-size: 2rem;
+    text-align: center;
+    color: #BA28FF;    
     margin-left: auto;
     margin-right: auto;
     line-height: 1.25;
     max-width: 50rem;
+    margin-bottom: 4rem;
+  }
+  /* DESKTOP */
+  @media screen and (min-width: 768px) {
+    .hero h1 {
+      font-size: 2.5rem;
+    }
+  }
+  .hero_flex {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 700px) {
+    .hero_flex > .hero_item:first-child {
+      margin-right: 50px;
+    }
+  }
+  .hero_item {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 0 1 300px;
+    margin-bottom: 2.5rem;
+    color: #415659;
+    border: 1px solid #e7e7e7;
+    border-radius: 12px;
+    padding: 24px;
+    cursor: pointer;
   }
 
-@media screen and (min-width: 768px) {
-  .hero h1 {
-    font-size: 2.5rem;
-  }
-}
 </style>
-<section class="hero">  
-    <h1 class="hero_title">New tools and weekly reports on tech stocks and crypto - coming soon!</h1>
-</section>
+
