Consolidation of styling changes

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,14 +3,14 @@
     display: flex;
     align-items: center;
     height: 4rem;
-    margin-top: 1.5rem;
+    padding-top: 2rem;    
   }  
   nav .logo_wrapper {
     position: absolute;          
   }
   nav .logo {
     width: 3.5rem;
-    margin-right: 0.5rem;
+    margin-right: 0.25rem;
     position: relative;
     top: -10px;
   }
@@ -27,7 +27,7 @@
     <div class="nav_parent">
       <div class="logo_wrapper">
         <img class="logo" src="img/robot-purple.svg" alt="Robostox Logo" />
-        <span class="title">Robostox</span>
+          <span class="title">Robostox</span>
       </div>    
     </div>
   </div>
