--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,38 +1,39 @@
-
-<section class="hero">
-  <h1 class="hero_title">New tools and weekly reports on tech stocks and crypto - coming soon!</h1>
-  <div class="hero_flex">
-    <div class="hero_item">
-      <div class="icon_wrapper">
-        <i class="fab fa-facebook"></i>
-      </div>
-      <p>Click here to join the Facebook group and become a member of our tech community.</p>
-    </div>  
-    <div class="hero_item">
-      <div class="icon_wrapper">
-        <i class="fab fa-facebook"></i>
-      </div>
-      <p>Click here to join the Facebook group and become a member of our tech community.</p>
-    </div>    
-  </div>    
+<section class="hero">  
+    <h1 class="hero_title">Our products for tech and crypto investors.</h1>
+    <div class="hero_flex">
+      <div class="hero_item">
+        <div class="icon_wrapper">
+          <i class="fab fa-facebook"></i>
+        </div>
+        <p>Click here to join the Facebook group and become a member of our tech community.</p>
+      </div>  
+      <div class="hero_item">
+        <div class="icon_wrapper">
+          <i class="fab fa-facebook"></i>
+        </div>
+        <p>Click here to join the Facebook group and become a member of our tech community.</p>
+      </div>    
+    </div>
 </section>
 
 <style>
   /* MOBILE */
   .hero h1 {
     font-size: 2rem;
-    text-align: center;
-    color: #BA28FF;    
+    font-weight: 500;
+    text-align: center;       
+    /* color: #BA28FF;     */
     margin-left: auto;
     margin-right: auto;
     line-height: 1.25;
-    max-width: 50rem;
-    margin-bottom: 4rem;
+    max-width: 60rem;
+    margin-bottom: 3rem;
   }
   /* DESKTOP */
   @media screen and (min-width: 768px) {
     .hero h1 {
-      font-size: 2.5rem;
+      font-size: 2.65rem;
+      margin-bottom: 5rem;
     }
   }
   .hero_flex {
@@ -40,11 +41,7 @@
     justify-content: center;
     margin-bottom: 25px;
     flex-wrap: wrap;
-  }
-  @media screen and (min-width: 700px) {
-    .hero_flex > .hero_item:first-child {
-      margin-right: 50px;
-    }
+    align-items: center;
   }
   .hero_item {
     list-style-type: none;
@@ -52,12 +49,26 @@
     flex-direction: column;
     align-items: center;
     flex: 0 1 300px;
-    margin-bottom: 2.5rem;
-    color: #415659;
-    border: 1px solid #e7e7e7;
+    margin-bottom: 2.5rem;    
+    border: 2px solid #BA28FF;    
     border-radius: 12px;
-    padding: 24px;
-    cursor: pointer;
+    padding: 2rem;    
+  }  
+  @media screen and (min-width: 750px) {
+    .hero_item:first-child {
+      margin-right: 5rem;
+    }
+  }  
+  .hero_item p {
+    font-size: 1.1rem;
+    text-align: center;
+    /* color: #BA28FF; */
+  }
+
+  .icon_wrapper i {
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem;
+    /* color: #BA28FF; */
   }
 
 </style>
