--- a/css/styles.css
+++ b/css/styles.css
@@ -23,14 +23,15 @@ img {
 }
 
 section {	
-	min-height: 100vh;
+	/* min-height: 100vh; */
 	padding: 2rem 2rem;
 }
 
 /* Desktop */
 @media screen and (min-width: 768px) {
   section {
-    padding: 4rem;
+    padding-top: 7rem;
+		padding-bottom: 7rem;
   }
 }
 
