Added hero_item title

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,16 +1,18 @@
 <section class="hero">  
     <h1 class="hero_title">Our products for tech and crypto investors.</h1>
     <div class="hero_flex">
-      <div class="hero_item">
-        <div class="icon_wrapper">
+      <div class="hero_item">              
+        <div class="icon_wrapper">          
           <i class="fab fa-facebook"></i>
         </div>
+        <p class="item_title">Substack</p>  
         <p>Click here to join the Facebook group and become a member of our tech community.</p>
       </div>  
       <div class="hero_item">
         <div class="icon_wrapper">
           <i class="fab fa-facebook"></i>
         </div>
+        <p class="item_title">Slack App</p>
         <p>Click here to join the Facebook group and become a member of our tech community.</p>
       </div>    
     </div>
@@ -53,12 +55,18 @@
     border: 2px solid #BA28FF;    
     border-radius: 12px;
     padding: 2rem;    
-  }  
+  }
+  .hero_item .item_title {
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-bottom: 0.75rem;
+  }
+
   @media screen and (min-width: 750px) {
     .hero_item:first-child {
       margin-right: 5rem;
     }
-  }  
+  }   
   .hero_item p {
     font-size: 1.1rem;
     text-align: center;
@@ -67,7 +75,7 @@
 
   .icon_wrapper i {
     font-size: 2.5rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     /* color: #BA28FF; */
   }
 
