--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,17 @@
 <style>   
   .nav_parent {
     display: flex;
-    align-items: center;
-    height: 4rem;
-    padding-top: 2rem;    
+    justify-content: center;
+    height: 4.5rem;    
+    background-color: #242424;
+    padding-top: 1.25rem;
+    border-bottom: 1px solid #141414;
   }  
   nav .logo_wrapper {
     position: absolute;          
   }
   nav .logo {
-    width: 3.5rem;
+    width: 3.25rem;
     margin-right: 0.25rem;
     position: relative;
     top: -10px;
@@ -18,17 +20,16 @@
     font-size: 1.75rem;
     font-weight: 700;
     text-transform: uppercase;
-    color: #BA28FF
+    /* color: #BA28FF; */
+    color: white
   } 
 </style>
 
-<nav role="navigation">
-  <div class="container"> 
-    <div class="nav_parent">
-      <div class="logo_wrapper">
-        <img class="logo" src="img/robot-purple.svg" alt="Robostox Logo" />
-          <span class="title">Robostox</span>
-      </div>    
-    </div>
+<nav role="navigation">  
+  <div class="nav_parent">
+    <div class="logo_wrapper">
+      <img class="logo" src="img/robot-white.svg" alt="Robostox Logo" />
+        <span class="title">Robostox</span>
+    </div>    
   </div>
 </nav>
