--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,33 @@
-<div class="hero-foot">
-	<nav class="tabs">
-		<div class="container">
-			<ul>
-				<li class="is-active"><a>Overview</a></li>
-				<li><a>Modifiers</a></li>
-				<li><a>Grid</a></li>
-				<li><a>Elements</a></li>
-				<li><a>Components</a></li>
-				<li><a>Layout</a></li>
-			</ul>
-		</div>
-	</nav>
+<style>
+
+	footer {
+		margin-top: auto;		
+	}
+	.footer_wrapper {
+		display: flex;
+		justify-content: center;
+		padding-top: 1.25rem;
+    padding-bottom: 1rem;
+		background-color: #242424;
+		color: rgba(255,255,255,0.71);
+		font-size: 0.9rem;
+	}	
+	.copyright {
+		margin-right: 1rem;
+	}
+	.policies a {
+		text-decoration: underline;
+	}
+</style>
+<footer>
+	<div class="footer_wrapper">
+		<p class="copyright">
+			&copy; Copyright Robostox
+		</p>
+		<p class="policies">			
+			<a href="">Terms</a> | 
+			<a href="">Privacy</a> | 
+			<a href="">Support</a>
+		</p>
 </div>
+</footer>
