--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,14 +1,13 @@
 <style>   
-  .nav_parent {
+  .nav_wrapper {
     display: flex;
-    justify-content: center;
-    height: 4.5rem;    
+    justify-content: center;       
     background-color: #242424;
-    padding-top: 1.25rem;
-    border-bottom: 1px solid #141414;
+    padding-top: 1.25rem;    
+    padding-bottom: 0.5rem;    
   }  
   nav .logo_wrapper {
-    position: absolute;          
+    position: relative;
   }
   nav .logo {
     width: 3.25rem;
@@ -24,9 +23,8 @@
     color: white
   } 
 </style>
-
 <nav role="navigation">  
-  <div class="nav_parent">
+  <div class="nav_wrapper">
     <div class="logo_wrapper">
       <img class="logo" src="img/robot-white.svg" alt="Robostox Logo" />
         <span class="title">Robostox</span>
