--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,6 +5,6 @@
   <body>    
       {% include nav.html %}
       {% include hero.html %}
-      <!-- {% include footer.html %} -->    
+      {% include footer.html %}
   </body>
 </html>
