Finishes hero_item copy content

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -3,18 +3,18 @@
     <div class="hero_flex">
       <div class="hero_item">              
         <div class="icon_wrapper">          
-          <i class="fab fa-facebook"></i>
+          <i class="fas fa-newspaper"></i>
         </div>
         <p class="item_title">Substack</p>  
-        <p class="blurb">Click here to join the Facebook group and become a member of our tech community.</p>
+        <p class="blurb">Clear and concise reports analysing tech stocks and crypto projects - delivered to your inbox every week.</p>
         <a class="item_button" href="">Check It Out</a>
       </div>
       <div class="hero_item">
         <div class="icon_wrapper">
-          <i class="fab fa-facebook"></i>
+          <i class="fab fa-slack"></i>
         </div>
         <p class="item_title">Slack App</p>
-        <p class="blurb">Click here to join the Facebook group and become a member of our tech community.</p>
+        <p class="blurb">Quickly share stock and crypto price information in your Slack channels with two simple commands.</p>
         <a class="item_button" href="">Check It Out</a>
       </div>
     </div>
