Added extra links, edited footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,12 +20,11 @@
 <footer>
 	<div class="footer_wrapper">
 		<p class="copyright">
-			&copy; Copyright Robostox
+			&copy; Copyright Robostox 2022
 		</p>
-		<p class="policies">			
-			<a href="">Terms</a> | 
-			<a href="">Privacy</a> | 
-			<a href="">Support</a>
+		<p class="policies">
+			<a href="https://www.privacypolicies.com/live/264580d1-3ba4-4523-a365-02e9de51e0fe">Privacy Policy</a> |
+			<a  href="https://danieleasterman.com">About the Creator</a>
 		</p>
 </div>
 </footer>
