--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,20 +1,20 @@
 <section class="hero">  
-    <h1 class="hero_title">Resources for tech and crypto investors.</h1>
+    <h1 class="hero_title">Clear information and tools for tech and crypto investors.</h1>
     <div class="hero_flex">
       <div class="hero_item">              
         <div class="icon_wrapper">          
           <i class="fas fa-newspaper"></i>
         </div>
         <p class="item_title">Substack</p>  
-        <p class="blurb">Clear and concise reports analysing tech stocks and crypto projects - delivered to your inbox every week.</p>
-        <a class="item_button" href="">Check It Out</a>
+        <p class="blurb">Concise, bitesize reports analysing tech stocks and crypto projects - delivered to your inbox weekly.</p>
+        <a class="item_button" href="https://robostox.substack.com">Check It Out</a>
       </div>
       <div class="hero_item">
         <div class="icon_wrapper">
           <i class="fab fa-slack"></i>
         </div>
         <p class="item_title">Slack App</p>
-        <p class="blurb">Quickly share stock and crypto price information in your Slack channels with two simple commands.</p>
+        <p class="blurb">Easily share stock and crypto price information in Slack channels with two simple commands.</p>
         <a class="item_button" href="">Check It Out</a>
       </div>
     </div>
