Change button copy

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -15,7 +15,7 @@
         </div>
         <p class="item_title">Slack App</p>
         <p class="blurb">Easily share stock and crypto price information in Slack channels with two simple commands.</p>
-        <a class="item_button" href="https://robostox-v1.herokuapp.com/slack/install">Check It Out</a>
+        <a class="item_button" href="https://robostox-v1.herokuapp.com/slack/install">Add To Slack</a>  
       </div>
     </div>
 </section>
