simplified title copy change

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,5 +1,5 @@
 <section class="hero">  
-    <h1 class="hero_title">Clear information and tools for tech and crypto investors.</h1>
+    <h1 class="hero_title">Tools and weekly reports for tech and crypto investors.</h1>
     <div class="hero_flex">
       <div class="hero_item">              
         <div class="icon_wrapper">          
