Text and css tweaks

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,12 +1,12 @@
 <section class="hero">  
-    <h1 class="hero_title">Tools and weekly reports for tech and crypto investors.</h1>
+    <h1 class="hero_title">Tools and weekly reports for tech<br>and crypto investors.</h1>
     <div class="hero_flex">
       <div class="hero_item">              
         <div class="icon_wrapper">          
           <i class="fas fa-newspaper"></i>
         </div>
         <p class="item_title">Substack</p>  
-        <p class="blurb">Concise, bitesize reports analysing tech stocks and crypto projects - delivered to your inbox weekly.</p>
+        <p class="blurb">Cler and concise reports analysing tech stocks and crypto projects - delivered to your inbox weekly.</p>
         <a class="item_button" href="https://robostox.substack.com">Check It Out</a>
       </div>
       <div class="hero_item">
