Fix clear copy error

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,7 +6,7 @@
           <i class="fas fa-newspaper"></i>
         </div>
         <p class="item_title">Substack</p>  
-        <p class="blurb">Cler and concise reports analysing tech stocks and crypto projects - delivered to your inbox weekly.</p>
+        <p class="blurb">Clear and concise reports analysing tech stocks and crypto projects - delivered to your inbox weekly.</p>
         <a class="item_button" href="https://robostox.substack.com">Check It Out</a>
       </div>
       <div class="hero_item">
