--- a/css/styles.css
+++ b/css/styles.css
@@ -23,10 +23,10 @@ a {
 img {
 	vertical-align: middle;
 }
+/* Mobile */
 section {	
 	padding: 2rem 2rem;
 }
-
 /* Desktop */
 @media screen and (min-width: 768px) {
   section {
@@ -35,7 +35,7 @@ section {
   }
 }
 
-/* ***HERO*** */
+/***** HERO ******/
 /* Mobile */
 .hero h1 {
 	font-size: 2rem;
