Change item_title to h2 for google

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -5,7 +5,7 @@
         <div class="icon_wrapper">          
           <i class="fas fa-newspaper"></i>
         </div>
-        <p class="item_title">Substack</p>  
+        <h2 class="item_title">Substack</h2>
         <p class="blurb">Clear and concise reports analysing tech stocks and crypto projects - delivered to your inbox weekly.</p>
         <a class="item_button" href="https://robostox.substack.com">Check It Out</a>
       </div>
@@ -13,7 +13,7 @@
         <div class="icon_wrapper">
           <i class="fab fa-slack"></i>
         </div>
-        <p class="item_title">Slack App</p>
+        <h2 class="item_title">Slack App</h2>
         <p class="blurb">Easily share stock and crypto price information in Slack channels with two simple commands.</p>
         <a class="item_button" href="https://robostox-v1.herokuapp.com/slack/install">Add To Slack</a>  
       </div>
